# GrimForge-engine

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  main.cpp
src/shader/: shader.cpp  shader.h
